# ChangeLog for dev-util/byacc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/byacc/ChangeLog,v 1.95 2014/06/25 05:00:26 radhermit Exp $

*byacc-20140527 (25 Jun 2014)

  25 Jun 2014; Tim Harder <radhermit@gentoo.org> +byacc-20140527.ebuild:
  Version bump.

*byacc-20140422 (12 May 2014)

  12 May 2014; Tim Harder <radhermit@gentoo.org> +byacc-20140422.ebuild:
  Version bump.

*byacc-20140409 (11 Apr 2014)

  11 Apr 2014; Tim Harder <radhermit@gentoo.org> +byacc-20140409.ebuild:
  Version bump.

  19 Mar 2014; Agostino Sarubbo <ago@gentoo.org> byacc-20140101.ebuild:
  Stable for alpha, wrt bug #502802

  12 Mar 2014; Agostino Sarubbo <ago@gentoo.org> byacc-20140101.ebuild:
  Stable for sparc, wrt bug #502802

  08 Mar 2014; Markus Meier <maekke@gentoo.org> byacc-20140101.ebuild:
  arm stable, bug #502802

  06 Mar 2014; Agostino Sarubbo <ago@gentoo.org> byacc-20140101.ebuild:
  Stable for ppc64, wrt bug #502802

  05 Mar 2014; Agostino Sarubbo <ago@gentoo.org> byacc-20140101.ebuild:
  Stable for ppc, wrt bug #502802

  04 Mar 2014; Agostino Sarubbo <ago@gentoo.org> byacc-20140101.ebuild:
  Stable for x86, wrt bug #502802

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> byacc-20140101.ebuild:
  amd64 stable, bug #502802

  02 Mar 2014; Akinori Hattori <hattya@gentoo.org> byacc-20140101.ebuild:
  ia64 stable wrt bug #502802

  01 Mar 2014; Jeroen Roovers <jer@gentoo.org> byacc-20140101.ebuild:
  Stable for HPPA (bug #502802).

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> byacc-20130925.ebuild:
  Stable for sparc, wrt bug #495656

  18 Jan 2014; Agostino Sarubbo <ago@gentoo.org> byacc-20130925.ebuild:
  Stable for alpha, wrt bug #495656

  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> byacc-20130925.ebuild:
  Stable for ia64, wrt bug #495656

  14 Jan 2014; Agostino Sarubbo <ago@gentoo.org> byacc-20130925.ebuild:
  Stable for ppc64, wrt bug #495656
